Add OAI config endpoint
