# server/src/main/resources/openapi/meta-storage-1.0.yaml
@@ -3,6 +3,45 @@ info:
   title: Meta Storage
   version: v1
 paths:
+  # OAI config (singleton)
+  /meta-storage/config/oai:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+    get:
+      description: Get OAI configuration
+      operationId: getOaiConfig
+      responses:
+        "200":
+          description: OAI configuration returned
+          content:
+            application/json:
+              schema:
+                $ref: schemas/oaiConfig.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
+    put:
+      description: Update OAI configuration.
+      operationId: putOaiConfig
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/oaiConfig.json
+      responses:
+        "204":
+          description: OAI configuration updated
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "404":
+          $ref: "#/components/responses/trait_404"
+        "500":
+          $ref: "#/components/responses/trait_500"
   # Configuration
   /meta-storage/config/matchkeys:
     parameters:
